--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "@zerodevx/svelte-toast": "^0.9.2",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -36,7 +37,8 @@
     "bcrypt": "^5.1.0",
     "svelte-icons": "^2.1.0",
     "sveltekit-flash-message": "^0.11.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "zod": "^3.21.4"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
