--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prisma": "^4.11.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-loading-spinners": "^0.3.4",
     "tailwindcss": "^3.2.7",
     "tslib": "^2.4.1",
     "typescript": "^4.9.3",
