--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-node": "^1.2.2",
     "@sveltejs/kit": "^1.5.0",
     "@tailwindcss/forms": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -31,10 +32,11 @@
   },
   "type": "module",
   "dependencies": {
-    "@auth/core": "^0.5.0",
-    "@auth/sveltekit": "^0.2.2",
+    "@auth/core": "latest",
+    "@auth/sveltekit": "latest",
     "@prisma/client": "^4.11.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
     "svelte-french-toast": "^1.0.3",
     "svelte-icons": "^2.1.0",
     "ts-node": "^10.9.1",
