Add search and animations

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@auth/core": "latest",
     "@auth/sveltekit": "latest",
     "@prisma/client": "^4.11.0",
+    "@types/fuzzy-search": "^2.1.2",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "fuzzy-search": "^3.2.1",
     "svelte-french-toast": "^1.0.3",
     "svelte-icons": "^2.1.0",
     "ts-node": "^10.9.1",
