--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "book-store",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "scripts": {
     "dev": "vite dev",
@@ -22,6 +22,7 @@
     "eslint-plugin-svelte3": "^4.0.0",
     "postcss": "^8.4.21",
     "prisma": "^4.11.0",
+    "simple-svelte-autocomplete": "^2.5.2",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
     "svelte-loading-spinners": "^0.3.4",
@@ -37,6 +38,7 @@
     "@prisma/client": "^4.11.0",
     "@types/fuzzy-search": "^2.1.2",
     "bcrypt": "^5.1.0",
+    "clsx": "^2.0.0",
     "dotenv": "^16.0.3",
     "fuzzy-search": "^3.2.1",
     "svelte-french-toast": "^1.0.3",
