--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/adapter-node": "^1.2.3",
-    "@sveltejs/kit": "^1.5.0",
+    "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/forms": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
-    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-plugin-svelte": "^2.33.0",
     "postcss": "^8.4.21",
     "prisma": "^5.1.1",
     "simple-svelte-autocomplete": "^2.5.2",
-    "svelte": "^3.54.0",
-    "svelte-check": "^3.0.1",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.4.3",
     "svelte-loading-spinners": "^0.3.4",
     "tailwindcss": "^3.2.7",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
+    "typescript": "^5.0.0",
     "vite": "^4.0.0"
   },
   "type": "module",
