--- a/.github/workflows/npm-check.yml
+++ b/.github/workflows/npm-check.yml
@@ -22,7 +22,7 @@ jobs:
       run: npm install
       
     - name: svelte check
-      run: npm run check
+      run: npm run check-noenv
       
     - name: eslint 
       run: npm run lint
