--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "book-store",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "private": true,
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
+    "build-noenv": "BOOKS_API_KEY='' vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check-noenv": "BOOKS_API_KEY='' svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -13,24 +14,27 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/adapter-node": "^1.2.3",
+    "@sveltejs/adapter-node": "^1.3.1",
     "@sveltejs/kit": "^1.20.4",
     "@tailwindcss/forms": "^0.5.3",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
-    "eslint-plugin-svelte": "^2.33.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-svelte": "^2.30.0",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.0",
+    "prettier-plugin-svelte": "^2.10.1",
     "prisma": "^5.1.1",
     "simple-svelte-autocomplete": "^2.5.2",
-    "svelte": "^4.0.0",
+    "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
     "svelte-loading-spinners": "^0.3.4",
     "tailwindcss": "^3.2.7",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.0.0"
+    "vite": "^4.4.2"
   },
   "type": "module",
   "dependencies": {
