--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "svelte": "^4.2.2",
     "svelte-check": "^3.5.2",
     "svelte-loading-spinners": "^0.3.4",
+    "sveltekit-sse": "^0.5.3",
     "tailwindcss": "^3.3.3",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
