--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@auth/core": "latest",
-    "@auth/sveltekit": "latest",
+    "@auth/core": "0.27.0",
+    "@auth/sveltekit": "0.11.0",
     "@prisma/client": "^5.7.1",
     "@types/fuzzy-search": "^2.1.5",
     "bcrypt": "^5.1.1",
