--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "book-store",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "scripts": {
     "dev": "vite dev",
@@ -42,12 +42,14 @@
     "@auth/core": "0.27.0",
     "@auth/sveltekit": "0.11.0",
     "@prisma/client": "^5.7.1",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@types/fuzzy-search": "^2.1.5",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "fuzzy-search": "^3.2.1",
     "language-icons": "^0.3.0",
+    "postcss-import": "^16.1.0",
     "svelte-french-toast": "^1.2.0",
     "svelte-icons": "^2.1.0",
     "tailwind-merge": "^1.14.0",
