--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@types/fuzzy-search": "^2.1.5",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.5",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "fuzzy-search": "^3.2.1",
     "language-icons": "^0.3.0",
+    "svelte-chartjs": "^3.1.5",
     "svelte-french-toast": "^1.2.0",
     "svelte-icons": "^2.1.0",
     "tailwind-merge": "^1.14.0",
