--- a/.github/workflows/npm-check.yml
+++ b/.github/workflows/npm-check.yml
@@ -2,30 +2,29 @@ name: NodeJS check
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Use Node.js
-      uses: actions/setup-node@v3
-      with:
-          node-version: 'latest'
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "latest"
 
+      - name: Install
+        run: npm install
 
-    - name: Install
-      run: npm install
-      
-    - name: svelte check
-      run: npm run check-noenv
-      
-    # - name: eslint 
-    #   run: npm run lint
-      
-    - name: vite build
-      run: npm run build-noenv
+      - name: svelte check
+        run: npm run check-noenv
+
+      # - name: eslint
+      #   run: npm run lint
+
+      - name: vite build
+        run: npm run build-noenv
