--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@prisma/client": "^5.7.1",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@types/fuzzy-search": "^2.1.5",
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.41.1",
     "chart.js": "^4.4.5",
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
