--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.1.1",
-    "@sveltejs/adapter-node": "^1.3.1",
-    "@sveltejs/kit": "^1.30.3",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-node": "^2.0.0",
+    "@sveltejs/kit": "^2.7.4",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -35,7 +36,7 @@
     "tailwindcss": "^3.4.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^4.5.2"
+    "vite": "^5.0.0"
   },
   "type": "module",
   "dependencies": {
