--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check-noenv": "BOOKS_API_KEY='' svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "data-migration:add-optional-date": "node ./prisma/migrations/20241110174304_add_optional_date/data-migration.js"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
