--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "book-store",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "dev": "vite dev",
@@ -37,7 +37,8 @@
     "tailwindcss": "^3.4.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "http-status-codes": "^2.3.0"
   },
   "type": "module",
   "dependencies": {
