--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@sveltejs/kit": "^2.8.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "http-status-codes": "^2.3.0",
     "postcss": "^8.4.32",
     "prettier": "2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
@@ -37,8 +39,7 @@
     "tailwindcss": "^3.4.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "vite": "^5.0.0",
-    "http-status-codes": "^2.3.0"
+    "vite": "^5.0.0"
   },
   "type": "module",
   "dependencies": {
@@ -58,6 +59,7 @@
     "svelte-icons": "^2.1.0",
     "tailwind-merge": "^1.14.0",
     "ts-node": "^10.9.2",
+    "uuid": "^11.0.3",
     "zod": "^3.22.4"
   },
   "prisma": {
