--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@sveltejs/kit": "^2.8.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/node": "^22.9.0",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -37,8 +38,10 @@
     "svelte-loading-spinners": "^0.3.4",
     "sveltekit-sse": "^0.5.3",
     "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3",
     "vite": "^5.0.0"
   },
   "type": "module",
@@ -58,11 +61,10 @@
     "svelte-french-toast": "^1.2.0",
     "svelte-icons": "^2.1.0",
     "tailwind-merge": "^1.14.0",
-    "ts-node": "^10.9.2",
     "uuid": "^11.0.3",
     "zod": "^3.22.4"
   },
   "prisma": {
-    "seed": "node prisma/seed.js"
+    "seed": "tsx prisma/seed.ts"
   }
 }
