--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strict": true,
+    "strict": true
     // "paths": {
     //   "$src": ["./src"],
     //   "$appTypes": ["./src/app.d.ts"],
