Add and run prettier import organizer

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "http-status-codes": "^2.3.0",
     "postcss": "^8.4.32",
     "prettier": "2.8.8",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-svelte": "^2.10.1",
     "prisma": "^5.7.1",
     "simple-svelte-autocomplete": "^2.5.2",
