--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@zerodevx/svelte-img": "^2.1.2",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-svelte": "^2.35.1",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^8.10.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-svelte": "^2.46.1",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "http-status-codes": "^2.3.0",
     "postcss": "^8.4.32",
-    "prettier": "2.8.8",
-    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-organize-imports": "^4.2.0",
     "prettier-plugin-svelte": "^2.10.1",
     "prisma": "^5.7.1",
     "simple-svelte-autocomplete": "^2.5.2",
