--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
-DATABASE_URL=""
-AUTH_SECRET=""
+DATABASE_URL=
+AUTH_SECRET=
 
-username=""
-password=""
-BOOKS_API_KEY=""
+username=
+password=
+BOOKS_API_KEY=
