--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,10 @@ services:
   web:
     build: .
     ports:
-      - 3001:3000
-    environment:
-      - DATABASE_URL=file:/database/prod.db
+      - 4000:3000 # to:from
+    env_file:
+      - .env.production # see env.example for the required keys
     volumes:
       - book-store:/database
-
 volumes:
   book-store:
