--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "check-noenv": "BOOKS_API_KEY='' svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint .",
-    "data-migration:add-optional-date": "node ./prisma/migrations/20241110174304_add_optional_date/data-migration.js"
+    "data-migration:add-optional-date": "node ./prisma/migrations/20241110174304_add_optional_date/data-migration.js",
+    "seed-initial": "tsx prisma/seed-initial.ts"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
